# darkmatter

./: .env.example  .gitignore  CONTEXT_PASSPORT.md  Documents - Shortcut.lnk  INTEGRITY_SPEC_V1.md  PHASE_STATUS.md  PRODUCTION.md  README.md  SCHEMA.md  SETUP.md  demo.js  keygen.js  package-lock.json  package.json  register.js  register_witness.json  test_commit.json
client/: darkmatter.py
examples/: README.md  agent_xx.py  agent_yy.py  chain.json  complex_pipeline.py  proof_bundle_trc_complex_1775133337.json  proof_bundle_trc_complex_1775140811.json  proof_bundle_trc_complex_1775140985.json  verify_darkmatter_chain.py
extension/: manifest.json  options.html  options.js  popup.html  popup.js  session_bridge.js
extension/src/: background.js  capture.js
github-template/: darkmatter_witness_server.py  integrity_test_vectors.json  validate_phases.py  verify_darkmatter_chain.py
migrations/: 005_l3_attestation.sql  007_completeness_claim.sql
public/: about.html  admin-usage.html  admin.html  admindashboard.html  black-box-for-ai.html  blog-what-problems-darkmatter-solves.html  blog-why-ai-logs-are-not-enough.html  blog.html  chain.html  chat.html  compare.html  compliance.html  dashboard.html  demo.html  docs.html  enterprise.html  index.html  integrity.html  join.html  login.html  organizations.html  pricing.html  privacy.html  reset-password.html  security.html  signup.html  threat-model.html  tos.html  usage.html  verify.html  why.html
public/black-box-for-ai/: event-schema.html
public/docs/: quickstart.html
public/integrations/: claude.html
sdk/python/: README.md  cli.py  darkmatter.py  pyproject.toml
sdk/python/darkmatter/: __init__.py  cli.py  client.py
sdk/python/darkmatter/integrations/: __init__.py  anthropic.py  langgraph.py  openai.py
sdk/python/integrations/: openai.py
sdk/typescript/: index.ts  package.json
sdk/typescript/src/: index.ts  integrity.test.ts
skills/darkmatter/: SKILL.md
src/: append-log.js  attestation.js  billing.js  checkpoint.js  integrity.js  keys.js  merkle.js  server.js  witness.js
src/lib/: crypto.js  store.js
src/routes/: chain.js  record.js  verify.js
supabase/: schema.sql  schema_integrity_v1.sql  schema_v12_only.sql
test/: smoke.test.js
witness-server/: Dockerfile  app.py
